<resources>
    <string name="app_name">BlipAndroid</string>
    <string name="parent">Parent/User</string>
    <string name="instructor">Instructor</string>
    <string name="login">Login</string>
    <string name="login_desc_text">Login to unlock stunning features</string>
    <string name="phone_number">Enter your mobile number</string>
    <string name="enter_admission_id">Enter your admission id</string>
    <string name="phn_num">9000457868</string>
    <string name="login_with_otp">Login with OTP</string>
    <string name="user_validation_error">Entered mobile number doesn\'t exists contact your
        institution administrators.</string>
    <string name="no_internet_msg">Please check your internet connection</string>
    <string name="didn_t_get_code">Didn\'t get code? Resend</string>
    <string name="resend">Resend</string>
    <string name="post_desc">A question from Nuclear Physics?</string>
    <string name="Close">close</string>
    <string name="otp_msg">One time password (OTP) has been sent to your mobile.</string>
    <string name="my_account">My Account</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string-array name="branch">
        <item>CSE</item>
        <item>Mech</item>
        <item>CIVIL</item>
        <item>Electrical</item>
    </string-array>
    <string name="section">Section</string>
    <string name="computer_science">Computer Science</string>
    <string name="cse_1">cse-1</string>
    <string name="attachment">Attachment</string>
    <string name="add_post">Add Post</string>
    <string name="new_post">Add New Post</string>
    <string name="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.Proin nunc mi, rhoncus sit amet lacus sed, eleifend faucibus ligula. Ut ullamcorper vehicular quam, sed ultrices mauris ultricies a.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="welcome_back_to_your_account">Welcome back to your account</string>
    <string name="welcome_to_seventhharmony">Welcome to \n Seventhharmony</string>
    <string name="know_more">Know more</string>
    <string name="next">Next</string>
    <string name="user_details">Parent/User Registration</string>
    <string name="user_edit_details">Parent/User Edit Profile</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="address_1">Address Line 1</string>
    <string name="address_2">Address Line 2</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="contact_us">Contact us through </string>
    <string name="mobile_number">Mobile number</string>
    <string name="otp_text">One time password (OTP) has\nbeen sent to your mobile number\nxxxxxxx%1$s.</string>
    <string name="contact_address"><b>Address:</b> Ground Floor of idea office, \n
        Near Nagarjunana, \n
        Circle Banjara Hills,\n
        Road no 1 Hyderabad,\n
        Telangana 500034\n
        Open today: 9:00 am – 8:00 pm</string>
    <string name="name_contact"><b>Name:</b> Nizamuddin</string>
    <string name="email_id_contact"><b>Email Id:</b> support@7thharmony.com</string>
    <string name="email_id_contact_at_login"><b>Please contact us at</b> support@7thharmony.com</string>
    <string name="no_posts_data">No Posts Data available</string>
    <string name="see_all_posts">See all posts</string>
    <string name="about_us">About Us</string>
    <string name="user_details_info">All the details entered will be used by your institution. Please enter the valid and correct information as data can\'t be changed post submit. For any queries please contact the administrator.</string>
    <string name="about_us_page">Proven learning approaches Teaching is one of the most challenging and complex jobs on the planet. Our digital resources, tools, and learning materials are developed by educational experts to incorporate leading pedagogical practices. They are useful in any type of teaching moment and many can be used to support national education standards. Empowered educators From school teachers and tutors to home schoolers and parents, engaged adults are the key to unlocking each child\'s potential and drive to learn. We empower all kinds of educators to teach kids by providing the best educational resources in any form or device to be used at home, at school, and everywhere in-between. Unique experiences There is no such thing as in education; each educator and child has unique challenges and goals. We celebrate the diversity of our users by offering differentiated resources that can meet a wide range of educational needs - and raise kids\' confidence in learning. Conscientious and supportive We continue to provide academically sound content of the highest caliber and welcome input from our users as we address issues of equity, diversity, inclusivity and representation. Since we know there are many different approaches to teaching and education, we develop our materials to complement these different philosophies across subjects and grades.</string>
    <string name="privacy_policy"><b>Privacy Policy</b> \n
        Nizamuddin built the BlipAndroid app as a Free app. This SERVICE is provided by Nizamuddin at no cost and is intended for use as is. This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service. If you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy. The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at BlipAndroid unless otherwise defined in this Privacy Policy. Information Collection and Use For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information, including but not limited to phone number, email id, name, gender, date of birth. The information that I request will be retained on your device and is not collected by me in any way. The app does use third party services that may collect information used to identify you. Link to privacy policy of third party service providers used by the app Google Play Services Log Data I want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics. Cookies Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device\'s internal memory. This Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service. Service Providers I may employ third-party companies and individuals due to the following reasons: To facilitate our Service; To provide the Service on our behalf; To perform Service-related services; or To assist us in analyzing how our Service is used. I want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose. Security I value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security. Links to Other Sites This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by me. Therefore, I strongly advise you to review the Privacy Policy of these websites. I have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services. Children’s Privacy These Services do not address anyone under the age of 13. I do not knowingly collect personally identifiable information from children under 13. In the case I discover that a child under 13 has provided me with personal information, I immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact me so that I will be able to do necessary actions. Changes to This Privacy Policy I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page. This policy is effective as of 2020-09-06 Contact Us If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me at nizamuddin2494@gmail.com. This privacy policy page was created at privacypolicytemplate.net and modified/generated by App Privacy Policy Generator</string>
    <string name="save">Save</string>
    <string name="admission_id">Admission Id</string>
    <string name="full_name">Full Name</string>
    <string name="date_of_birth">Date of birth</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="father_name1">Father FirstName</string>
    <string name="father_name2">Father LastName</string>
    <string name="mother_name">Mother name</string>
    <string name="parent_mobile_number">Parent mobile number</string>
    <string name="select_branch">Select branch</string>
    <string name="select_gender">Select gender</string>
    <string name="select_year">Select year</string>
    <string name="checked_message">All the details entered are correct and I understand that I need to contact Admin for any change in data.</string>
    <string name="have_a_question">Have a question?</string>
    <string name="send_an_email">Send an email</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
</resources>