<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:background="@color/white">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="parent">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_vertical"
                android:text="@string/title"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <EditText
                android:id="@+id/etTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="#f7f7f7"
                android:gravity="top|left"
                android:hint="Welcome to Holi Celebration"
                android:inputType="textMultiLine"
                android:lines="3"
                android:maxLines="6"
                android:minLines="3"
                android:scrollbars="vertical" />

            <TextView
                android:id="@+id/tvMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_vertical"
                android:text="@string/message"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:typeface="sans" />

            <EditText
                android:id="@+id/etMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="#f7f7f7"
                android:gravity="top|left"
                android:hint="@string/post_desc"
                android:inputType="textMultiLine"
                android:lines="6"
                android:maxLines="8"
                android:minLines="6"
                android:scrollbars="vertical" />

            <TextView
                android:id="@+id/tvAttachment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_vertical"
                android:text="@string/attachment"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:typeface="sans" />

            <ImageView
                android:id="@+id/ivAttachment"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="12dp"
                android:background="#f7f7f7"
                android:gravity="top|left"
                android:inputType="textMultiLine"
                android:lines="8"
                android:maxLines="10"
                android:minLines="8"
                android:scrollbars="vertical" />

            <Button
                android:id="@+id/btnAddPost"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:background="@color/blue"
                android:gravity="center_vertical"
                android:stateListAnimator="@null"
                android:text="@string/add_post"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivAttachment" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>