<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginUsingOtpActivity">

    <RelativeLayout
        android:id="@+id/llLogin"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:orientation="horizontal"
        android:background="@color/colorGreen"
        android:weightSum="2"
        tools:ignore="MissingConstraints"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </RelativeLayout>

    <com.at2t.blipandroid.utils.OtpEditText
        android:id="@+id/et_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:cursorVisible="false"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
        android:digits="1234567890"
        android:layout_marginTop="64dp"
        android:inputType="number"
        android:maxLength="4"
        android:textIsSelectable="false"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llLogin"/>

    <TextView
        android:id="@+id/tvPhoneNumberText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="56dp"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:text="@string/didn_t_get_code"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_centerVertical="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_otp" />

    <TextView
        android:id="@+id/tvResend"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:text="@string/resend"
        android:layout_marginLeft="8dp"
        android:layout_centerVertical="true"
        android:textColor="@color/colorGreen"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/tvPhoneNumberText"
        app:layout_constraintLeft_toRightOf="@+id/tvPhoneNumberText" />

    <com.at2t.blipandroid.utils.CustomButton
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/enabled_login_button"
        android:stateListAnimator="@null"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPhoneNumberText"
        tools:ignore="UnusedAttribute"
        tools:layout_conversion_wrapHeight="105"
        tools:layout_conversion_wrapWidth="818" />

</android.support.constraint.ConstraintLayout>