<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Theme.AppCompat.DayNight.NoActionBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:isScrollContainer="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="24dp"
        tools:context=".View.MainActivity">

        <LinearLayout
            android:id="@+id/llLogin"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:orientation="horizontal"
            android:weightSum="2"
            tools:ignore="MissingConstraints">

            <RelativeLayout
                android:id="@+id/rl_parent"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorGreen"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:id="@+id/view2"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@color/white"
                    android:elevation="12dp"
                    android:foregroundGravity="center"
                    app:cardCornerRadius="40dp">

                    <ImageView
                        android:id="@+id/parentPanel"
                        android:layout_width="58dp"
                        android:layout_height="58dp"
                        android:layout_margin="8dp"
                        android:foregroundGravity="center_horizontal"
                        android:scaleType="centerCrop"
                        android:src="@drawable/parent_login_icon"
                        android:tint="#5c000000" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tvParent"
                    android:layout_width="wrap_content"
                    android:layout_height="16dp"
                    android:layout_below="@id/view2"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/white"
                    android:text="@string/parent"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_instructor"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:id="@+id/view3"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerVertical="true"
                    android:background="@color/white"
                    android:elevation="12dp"
                    app:cardCornerRadius="40dp">

                    <ImageView
                        android:id="@+id/instructorPanel"
                        android:layout_width="58dp"
                        android:layout_height="58dp"
                        android:layout_margin="8dp"
                        android:background="@color/white"
                        android:foregroundGravity="center"
                        android:scaleType="centerCrop"
                        android:src="@drawable/instructor_login_icon"
                        android:tint="#5c000000" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tvInstructor"
                    android:layout_width="wrap_content"
                    android:layout_height="16dp"
                    android:layout_below="@id/view3"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/instructor"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tvPhoneNumberText"
            android:layout_width="180dp"
            android:layout_height="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="64dp"
            android:fontFamily="sans-serif"
            android:text="@string/phone_number"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llLogin" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_phone_number"
            app:errorEnabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="12dp"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/mobile_number"
            android:paddingBottom="12dp"
            android:textColorHint="#deababab"
            android:textSize="14sp"
            android:theme="@style/TextInputLayoutCustomStyleBatch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPhoneNumberText">

            <com.at2t.blipandroid.utils.CustomEdittext
                android:id="@+id/EtPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:maxLength="10"
                android:maxLines="1"
                android:orientation="vertical"
                android:textColor="@color/black"
                android:textColorHint="#d8d8d8" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="@dimen/margin_50dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="24dp"
            android:background="@color/colorGreen"
            android:gravity="center"
            android:focusableInTouchMode="true"
            android:stateListAnimator="@null"
            android:text="@string/login_with_otp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_input_phone_number"
            tools:ignore="UnusedAttribute"
            tools:layout_conversion_wrapHeight="105"
            tools:layout_conversion_wrapWidth="818" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_40dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="24dp"
            android:autoLink="email"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:paddingStart="@dimen/margin_5dp"
            android:text="@string/email_id_contact_at_login"
            android:textColor="@color/black"
            android:textColorHint="#9E9E9E"
            android:textSize="@dimen/text_size_16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnLogin" />

        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:foregroundGravity="center"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
